# gen/iwfidl/model_workflow_get_request.go
@@ -19,7 +19,6 @@ type WorkflowGetRequest struct {
 	WorkflowId string `json:"workflowId"`
 	WorkflowRunId *string `json:"workflowRunId,omitempty"`
 	NeedsResults *bool `json:"needsResults,omitempty"`
-	WaitIfStillRunning *bool `json:"waitIfStillRunning,omitempty"`
 }
 
 // NewWorkflowGetRequest instantiates a new WorkflowGetRequest object
@@ -128,38 +127,6 @@ func (o *WorkflowGetRequest) SetNeedsResults(v bool) {
 	o.NeedsResults = &v
 }
 
-// GetWaitIfStillRunning returns the WaitIfStillRunning field value if set, zero value otherwise.
-func (o *WorkflowGetRequest) GetWaitIfStillRunning() bool {
-	if o == nil || o.WaitIfStillRunning == nil {
-		var ret bool
-		return ret
-	}
-	return *o.WaitIfStillRunning
-}
-
-// GetWaitIfStillRunningOk returns a tuple with the WaitIfStillRunning field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *WorkflowGetRequest) GetWaitIfStillRunningOk() (*bool, bool) {
-	if o == nil || o.WaitIfStillRunning == nil {
-		return nil, false
-	}
-	return o.WaitIfStillRunning, true
-}
-
-// HasWaitIfStillRunning returns a boolean if a field has been set.
-func (o *WorkflowGetRequest) HasWaitIfStillRunning() bool {
-	if o != nil && o.WaitIfStillRunning != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetWaitIfStillRunning gets a reference to the given bool and assigns it to the WaitIfStillRunning field.
-func (o *WorkflowGetRequest) SetWaitIfStillRunning(v bool) {
-	o.WaitIfStillRunning = &v
-}
-
 func (o WorkflowGetRequest) MarshalJSON() ([]byte, error) {
 	toSerialize := map[string]interface{}{}
 	if true {
@@ -170,9 +137,6 @@ func (o WorkflowGetRequest) MarshalJSON() ([]byte, error) {
 	}
 	if o.NeedsResults != nil {
 		toSerialize["needsResults"] = o.NeedsResults
-	}
-	if o.WaitIfStillRunning != nil {
-		toSerialize["waitIfStillRunning"] = o.WaitIfStillRunning
 	}
 	return json.Marshal(toSerialize)
 }
